tests/rosetta/out/Zig/anagrams-deranged-anagrams.error
zig build error: exit status 1
/tmp/TestMochiZigGoldenanagrams-deranged-anagrams53232629/001/prog.zig:40:9: error: local variable is never mutated
/tmp/TestMochiZigGoldenanagrams-deranged-anagrams53232629/001/prog.zig:40:9: note: consider using 'const'
